--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "vant": "^1.3.4",
     "vue": "^2.5.17"
   },
   "devDependencies": {
